# linux-syscalls

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: unit-tests.yml
bare/: Cargo.toml  build.rs
bare/src/: main.rs
bare/src/intrinsics/: aarch64.rs  x86_64.rs
docker/: aarch64.dockerfile  arm.dockerfile  base.dockerfile  compile.dockerfile  entrypoint.sh  loongarch64.dockerfile  mips.dockerfile  mips64.dockerfile  powerpc.dockerfile  powerpc64.dockerfile  riscv64.dockerfile  s390x.dockerfile  x86.dockerfile  x86_64.dockerfile
docs/: syscall0.md  syscall0_readonly.md  syscall1.md  syscall1_noreturn.md  syscall1_readonly.md  syscall2.md  syscall2_readonly.md  syscall3.md  syscall3_readonly.md  syscall4.md  syscall4_readonly.md  syscall5.md  syscall5_readonly.md  syscall6.md  syscall6_readonly.md  syscall7.md  syscall7_readonly.md  syscall__TEMPLATE__.md
examples/: kernel_exit.rs  x86-bare.rs
scripts/: compile.sh  doc.sh  docker-compile.sh  docker-create.sh  docker-run.sh  docker-test.sh  env.sh  gen-doc.sh  install-rust.sh  install-targets.sh  install.sh  test.sh
src/: bitflags.rs  init.rs  lib.rs  macros.rs  main.rs
src/env/: aux.rs  mod.rs
src/env/aux/: aarch64.rs  arch.rs  arm.rs  loongarch64.rs  mips.rs  mod.rs  powerpc.rs  riscv.rs  s390x.rs  x86.rs
src/env/kernel/: common.rs  mod.rs  x86.rs
src/env/vdso/: aarch64.rs  arch.rs  arm.rs  loongarch64.rs  mips.rs  mips64.rs  mod.rs  powerpc.rs  powerpc64.rs  riscv.rs  s390x.rs  x86.rs  x86_64.rs
src/inline/: _syscalls.rs  aarch64.rs  arm.rs  loongarch64.rs  mips.rs  mips64.rs  powerpc.rs  powerpc64.rs  riscv.rs  s390x.rs  thumb.rs  x86.rs  x86_64.rs
src/macros/: mips.rs  mod.rs
src/outline/: aarch64.s  arm.s  common.rs  loongarch64.s  mips.s  mips64.s  powerpc.s  powerpc64.rs  powerpc64.s  riscv.s  s390x.s  x86.rs  x86.s  x86_64.s
