[package]
name = "linux-syscalls"
version = "0.1.0"
edition = "2018"
metadata = { msrv = "1.40.0" }

[[example]]
name = 'x86-bare'
required-features = ["bare"]

[features]
default = []
bare = []

[build-dependencies]
cc = "1.0.79"

[dependencies]
linux-sysno = "0.2.2"
linux-errnos = { version = "0.1.1", default-features = false }
linux-raw-vdso = "0.1.0"
