[package]
name = "linux-syscalls"
version = "0.1.0"
edition = "2018"

[package.metadata]
msrv = "1.40.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "aarch64-unknown-linux-gnu",
  "arm-unknown-linux-gnueabi",
  "mips-unknown-linux-gnu",
  "mips64-unknown-linux-gnuabi64",
  "powerpc-unknown-linux-gnu",
  "powerpc64-unknown-linux-gnu",
  "riscv32gc-unknown-linux-gnu",
  "riscv64gc-unknown-linux-gnu",
  "s390x-unknown-linux-gnu",
  "i686-unknown-linux-gnu",
  "loongarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnux32",
  "armeb-unknown-linux-gnueabi",
]
rustc-args = ["--cfg", "docs_rs"]
cargo-args = ["-Z", "build-std=core"]

[[example]]
name = 'x86-bare'
required-features = ["bare"]

[features]
default = []
bare = []

[build-dependencies]
cc = "1.0.79"

[dependencies]
linux-sysno = "0.2.2"
linux-errnos = { version = "0.1.1", default-features = false }
linux-raw-vdso = "0.1.0"
