[workspace]
exclude = ["bare"]

[package]
name = "linux-syscalls"
version = "0.1.3"
edition = "2018"
authors = ["shurizzle <shura1991@gmail.com>"]
license = "MIT"
description = "A library to easily invoking linux system calls."
keywords = ["syscall", "no_std", "linux"]
readme = "README.md"
repository = "https://github.com/shurizzle/linux-syscalls"
homepage = "https://github.com/shurizzle/linux-syscalls"
documentation = "https://docs.rs/linux-syscalls"

[package.metadata]
msrv = "1.40.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "aarch64-unknown-linux-gnu",
  "arm-unknown-linux-gnueabi",
  "mips-unknown-linux-gnu",
  "mips64-unknown-linux-gnuabi64",
  "powerpc-unknown-linux-gnu",
  "powerpc64-unknown-linux-gnu",
  "riscv32gc-unknown-linux-gnu",
  "riscv64gc-unknown-linux-gnu",
  "s390x-unknown-linux-gnu",
  "i686-unknown-linux-gnu",
  "loongarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnux32",
]
rustdoc-args = ["--cfg", "docs_rs"]

[features]
default = ["std"]
std = ["linux-errnos/std"]
libc-compat = ["linux-errnos/libc-compat"]
bare = []

[build-dependencies]
rustc_version = "0.4.0"
cc = "1.0.79"

[dependencies]
linux-sysno = "0.2.2"
linux-errnos = { version = "0.1.1", default-features = false }
linux-raw-vdso = "0.1.2"
cfg-if = "1.0.0"
